--- a/static/index.html
+++ b/static/index.html
@@ -9,35 +9,176 @@
 
   
   <link rel="stylesheet" href="css/foundation.css">
-  
+  <link rel="stylesheet" href="css/faire.css">
 
   <script src="js/vendor/custom.modernizr.js"></script>
 
 </head>
 <body>
-
-	<div class="row">
-		<div class="large-11 columns">
+<div data-magellan-expedition="fixed">
+	<div class="row entry-section">
+		<div class="large-11 small-11 faire-entry columns">
 			<input type="text" placeholder="Add an item to your list...">
 		</div>
-		<div class="large-1 columns">
-			<a href="#" class="tiny button"><img src="img/menu-wht.png"></a>
+		<div class="large-1 small-1 faire-menu-entry columns">
+			<a href="javascript:alert('CLICK')">
+				<span style="margin:0 auto; display:block;width:20px;height:32px;position:relative;right:15px">
+					<span style="
+						display: block;
+						width: 16px;
+						height: 0px;
+						-webkit-box-shadow: 0 10px 0 1px #2ba6cb, 0 16px 0 1px #2ba6cb, 0 22px 0 1px #2ba6cb;
+						box-shadow: 0 10px 0 1px #2ba6cb, 0 16px 0 1px #2ba6cb, 0 22px 0 1px #2ba6cb;"></span>
+				</span>
+			</a>
 		</div>
 	</div>
-	
-	
-	
 	<div class="row">
 		<div class="large-12 small-12 columns">
-			<span>Update copy on i103</span>
+			<hr class="uber-divider" />
 		</div>
 	</div>
+</div>
+
 	
-	
-	
+	<div class="row faire-task">
+		<div class="large-12 small-12 columns">
+			<a href="#">Update copy on i103</a>
+		</div>
+	</div>
 	<div class="row">
 		<div class="large-12 small-12 columns">
-			<span>Update copy on i103</span>
+			<hr />
+		</div>
+	</div>
+	<div class="row faire-task">
+		<div class="large-12 small-12 columns">
+			<a href="#">Update copy on i104</a>
+		</div>
+	</div>
+	<div class="row">
+		<div class="large-12 small-12 columns">
+			<hr />
+		</div>
+	</div>
+	<div class="row faire-task">
+		<div class="large-12 small-12 columns">
+			<a href="#">Eat a very large banana quickly</a>
+		</div>
+	</div>
+	<div class="row">
+		<div class="large-12 small-12 columns">
+			<hr />
+		</div>
+	</div>
+	<div class="row faire-task">
+		<div class="large-12 small-12 columns">
+			<a href="#">0123457980123456789012345678901234567890123456789</a>
+		</div>
+	</div>
+	<div class="row">
+		<div class="large-12 small-12 columns">
+			<hr />
+		</div>
+	</div>
+	<div class="row faire-task faire-inactive">
+		<div class="large-12 small-12 columns">
+			<a href="#">test faire more</a>
+		</div>
+	</div>
+	<div class="row">
+		<div class="large-12 small-12 columns">
+			<hr />
+		</div>
+	</div>
+	<div class="row faire-task faire-inactive">
+		<div class="large-12 small-12 columns">
+			<a href="#">test faire more</a>
+		</div>
+	</div>
+	<div class="row">
+		<div class="large-12 small-12 columns">
+			<hr />
+		</div>
+	</div>
+	<div class="row faire-task faire-inactive">
+		<div class="large-12 small-12 columns">
+			<a href="#">test faire more</a>
+		</div>
+	</div><div class="row">
+		<div class="large-12 small-12 columns">
+			<hr />
+		</div>
+	</div>
+	<div class="row faire-task faire-inactive">
+		<div class="large-12 small-12 columns">
+			<a href="#">test faire more</a>
+		</div>
+	</div>
+	<div class="row">
+		<div class="large-12 small-12 columns">
+			<hr />
+		</div>
+	</div>
+	<div class="row faire-task faire-inactive">
+		<div class="large-12 small-12 columns">
+			<a href="#">test faire more</a>
+		</div>
+	</div>
+	<div class="row">
+		<div class="large-12 small-12 columns">
+			<hr />
+		</div>
+	</div>
+	<div class="row faire-task faire-inactive">
+		<div class="large-12 small-12 columns">
+			<a href="#">test faire more</a>
+		</div>
+	</div><div class="row">
+		<div class="large-12 small-12 columns">
+			<hr />
+		</div>
+	</div>
+	<div class="row faire-task faire-inactive">
+		<div class="large-12 small-12 columns">
+			<a href="#">test faire more</a>
+		</div>
+	</div><div class="row">
+		<div class="large-12 small-12 columns">
+			<hr />
+		</div>
+	</div>
+	<div class="row faire-task faire-inactive">
+		<div class="large-12 small-12 columns">
+			<a href="#">test faire more</a>
+		</div>
+	</div>
+	<div class="row">
+		<div class="large-12 small-12 columns">
+			<hr />
+		</div>
+	</div>
+	<div class="row faire-task faire-inactive">
+		<div class="large-12 small-12 columns">
+			<a href="#">test faire more</a>
+		</div>
+	</div><div class="row">
+		<div class="large-12 small-12 columns">
+			<hr />
+		</div>
+	</div>
+	<div class="row faire-task faire-inactive">
+		<div class="large-12 small-12 columns">
+			<a href="#">test faire more</a>
+		</div>
+	</div><div class="row">
+		<div class="large-12 small-12 columns">
+			<hr />
+		</div>
+	</div>
+	<div class="row faire-task faire-inactive">
+		<div class="large-12 small-12 columns">
+			<a href="#">test faire more</a>
 		</div>
 	</div>
   <script>
