--- a/static/index.html
+++ b/static/index.html
@@ -181,12 +181,14 @@
 			<a href="#">test faire more</a>
 		</div>
 	</div>
+	
+	<div id="testbottom"></div>
   <script>
   document.write('<script src=' +
   ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
   '.js><\/script>')
   </script>
-  
+
   <script src="js/foundation.min.js"></script>
   <!--
   
