--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" > <!--<![endif]-->
 
 <head>
-	<meta charset="utf-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Faire</title>
 
@@ -15,174 +15,169 @@
 
 </head>
 <body>
-<div data-magellan-expedition="fixed">
-	<div class="row entry-section">
-		<div class="large-11 small-11 faire-entry columns">
-			<input type="text" placeholder="Add an item to your list...">
+	<div data-magellan-expedition="fixed">
+		<div class="row entry-section">
+			<div class="large-11 small-11 faire-entry columns">
+				<input type="text" id="addItemInput" placeholder="Add an item to your list...">
+			</div>
+			<div class="large-1 small-1 faire-menu-entry columns">
+				<a href="javascript:alert('CLICK')">
+					<span class="faire-menu-icon-wrapper">
+						<span class="faire-menu-icon" style=""></span>
+					</span>
+				</a>
+			</div>
 		</div>
-		<div class="large-1 small-1 faire-menu-entry columns">
-			<a href="javascript:alert('CLICK')">
-				<span style="margin:0 auto; display:block;width:20px;height:32px;position:relative;right:15px">
-					<span style="
-						display: block;
-						width: 16px;
-						height: 0px;
-						-webkit-box-shadow: 0 10px 0 1px #2ba6cb, 0 16px 0 1px #2ba6cb, 0 22px 0 1px #2ba6cb;
-						box-shadow: 0 10px 0 1px #2ba6cb, 0 16px 0 1px #2ba6cb, 0 22px 0 1px #2ba6cb;"></span>
-				</span>
-			</a>
-		</div>
-	</div>
-	<div class="row">
-		<div class="large-12 small-12 columns">
-			<hr class="uber-divider" />
+		<div class="row">
+			<div class="large-12 small-12 columns">
+				<hr class="uber-divider" />
+			</div>
 		</div>
 	</div>
-</div>
 
+	<div id="task-container">
+		<div class="row faire-task">
+			<div class="large-12 small-12 columns">
+				<a href="#">Update copy on i103</a>
+			</div>
+		</div>
+		<div class="row">
+			<div class="large-12 small-12 columns">
+				<hr />
+			</div>
+		</div>
+		<div class="row faire-task">
+			<div class="large-12 small-12 columns">
+				<a href="#">Update copy on i104</a>
+			</div>
+		</div>
+		<div class="row">
+			<div class="large-12 small-12 columns">
+				<hr />
+			</div>
+		</div>
+		<div class="row faire-task">
+			<div class="large-12 small-12 columns">
+				<a href="#">Eat a very large banana quickly</a>
+			</div>
+		</div>
+		<div class="row">
+			<div class="large-12 small-12 columns">
+				<hr />
+			</div>
+		</div>
+		<div class="row faire-task">
+			<div class="large-12 small-12 columns">
+				<a href="#">WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW</a>
+			</div>
+		</div>
+		<div class="row">
+			<div class="large-12 small-12 columns">
+				<hr />
+			</div>
+		</div>
+		<div class="row faire-task faire-inactive">
+			<div class="large-12 small-12 columns">
+				<a href="#">test faire more</a>
+			</div>
+		</div>
+		<div class="row">
+			<div class="large-12 small-12 columns">
+				<hr />
+			</div>
+		</div>
+		<div class="row faire-task faire-inactive">
+			<div class="large-12 small-12 columns">
+				<a href="#">test faire more</a>
+			</div>
+		</div>
+		<div class="row">
+			<div class="large-12 small-12 columns">
+				<hr />
+			</div>
+		</div>
+		<div class="row faire-task faire-inactive">
+			<div class="large-12 small-12 columns">
+				<a href="#">test faire more</a>
+			</div>
+		</div><div class="row">
+			<div class="large-12 small-12 columns">
+				<hr />
+			</div>
+		</div>
+		<div class="row faire-task faire-inactive">
+			<div class="large-12 small-12 columns">
+				<a href="#">test faire more</a>
+			</div>
+		</div>
+		<div class="row">
+			<div class="large-12 small-12 columns">
+				<hr />
+			</div>
+		</div>
+		<div class="row faire-task faire-inactive">
+			<div class="large-12 small-12 columns">
+				<a href="#">test faire more</a>
+			</div>
+		</div>
+		<div class="row">
+			<div class="large-12 small-12 columns">
+				<hr />
+			</div>
+		</div>
+		<div class="row faire-task faire-inactive">
+			<div class="large-12 small-12 columns">
+				<a href="#">test faire more</a>
+			</div>
+		</div><div class="row">
+			<div class="large-12 small-12 columns">
+				<hr />
+			</div>
+		</div>
+		<div class="row faire-task faire-inactive">
+			<div class="large-12 small-12 columns">
+				<a href="#">test faire more</a>
+			</div>
+		</div><div class="row">
+			<div class="large-12 small-12 columns">
+				<hr />
+			</div>
+		</div>
+		<div class="row faire-task faire-inactive">
+			<div class="large-12 small-12 columns">
+				<a href="#">test faire more</a>
+			</div>
+		</div>
+		<div class="row">
+			<div class="large-12 small-12 columns">
+				<hr />
+			</div>
+		</div>
+		<div class="row faire-task faire-inactive">
+			<div class="large-12 small-12 columns">
+				<a href="#">test faire more</a>
+			</div>
+		</div><div class="row">
+			<div class="large-12 small-12 columns">
+				<hr />
+			</div>
+		</div>
+		<div class="row faire-task faire-inactive">
+			<div class="large-12 small-12 columns">
+				<a href="#">test faire more</a>
+			</div>
+		</div><div class="row">
+			<div class="large-12 small-12 columns">
+				<hr />
+			</div>
+		</div>
+		<div class="row faire-task faire-inactive">
+			<div class="large-12 small-12 columns">
+				<a href="#">test faire more</a>
+			</div>
+		</div>
+	</div>
 	
-	<div class="row faire-task">
-		<div class="large-12 small-12 columns">
-			<a href="#">Update copy on i103</a>
-		</div>
-	</div>
-	<div class="row">
-		<div class="large-12 small-12 columns">
-			<hr />
-		</div>
-	</div>
-	<div class="row faire-task">
-		<div class="large-12 small-12 columns">
-			<a href="#">Update copy on i104</a>
-		</div>
-	</div>
-	<div class="row">
-		<div class="large-12 small-12 columns">
-			<hr />
-		</div>
-	</div>
-	<div class="row faire-task">
-		<div class="large-12 small-12 columns">
-			<a href="#">Eat a very large banana quickly</a>
-		</div>
-	</div>
-	<div class="row">
-		<div class="large-12 small-12 columns">
-			<hr />
-		</div>
-	</div>
-	<div class="row faire-task">
-		<div class="large-12 small-12 columns">
-			<a href="#">WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW</a>
-		</div>
-	</div>
-	<div class="row">
-		<div class="large-12 small-12 columns">
-			<hr />
-		</div>
-	</div>
-	<div class="row faire-task faire-inactive">
-		<div class="large-12 small-12 columns">
-			<a href="#">test faire more</a>
-		</div>
-	</div>
-	<div class="row">
-		<div class="large-12 small-12 columns">
-			<hr />
-		</div>
-	</div>
-	<div class="row faire-task faire-inactive">
-		<div class="large-12 small-12 columns">
-			<a href="#">test faire more</a>
-		</div>
-	</div>
-	<div class="row">
-		<div class="large-12 small-12 columns">
-			<hr />
-		</div>
-	</div>
-	<div class="row faire-task faire-inactive">
-		<div class="large-12 small-12 columns">
-			<a href="#">test faire more</a>
-		</div>
-	</div><div class="row">
-		<div class="large-12 small-12 columns">
-			<hr />
-		</div>
-	</div>
-	<div class="row faire-task faire-inactive">
-		<div class="large-12 small-12 columns">
-			<a href="#">test faire more</a>
-		</div>
-	</div>
-	<div class="row">
-		<div class="large-12 small-12 columns">
-			<hr />
-		</div>
-	</div>
-	<div class="row faire-task faire-inactive">
-		<div class="large-12 small-12 columns">
-			<a href="#">test faire more</a>
-		</div>
-	</div>
-	<div class="row">
-		<div class="large-12 small-12 columns">
-			<hr />
-		</div>
-	</div>
-	<div class="row faire-task faire-inactive">
-		<div class="large-12 small-12 columns">
-			<a href="#">test faire more</a>
-		</div>
-	</div><div class="row">
-		<div class="large-12 small-12 columns">
-			<hr />
-		</div>
-	</div>
-	<div class="row faire-task faire-inactive">
-		<div class="large-12 small-12 columns">
-			<a href="#">test faire more</a>
-		</div>
-	</div><div class="row">
-		<div class="large-12 small-12 columns">
-			<hr />
-		</div>
-	</div>
-	<div class="row faire-task faire-inactive">
-		<div class="large-12 small-12 columns">
-			<a href="#">test faire more</a>
-		</div>
-	</div>
-	<div class="row">
-		<div class="large-12 small-12 columns">
-			<hr />
-		</div>
-	</div>
-	<div class="row faire-task faire-inactive">
-		<div class="large-12 small-12 columns">
-			<a href="#">test faire more</a>
-		</div>
-	</div><div class="row">
-		<div class="large-12 small-12 columns">
-			<hr />
-		</div>
-	</div>
-	<div class="row faire-task faire-inactive">
-		<div class="large-12 small-12 columns">
-			<a href="#">test faire more</a>
-		</div>
-	</div><div class="row">
-		<div class="large-12 small-12 columns">
-			<hr />
-		</div>
-	</div>
-	<div class="row faire-task faire-inactive">
-		<div class="large-12 small-12 columns">
-			<a href="#">test faire more</a>
-		</div>
-	</div>
-	
-	<div id="testbottom"></div>
   <script>
   document.write('<script src=' +
   ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
