Frontend work, move login/register to view.

--- a/static/index.html
+++ b/static/index.html
@@ -185,6 +185,8 @@
   </script>
 
   <script src="js/foundation.min.js"></script>
+  <script src="js/vendor/hammer.min.js"></script>
+  
   <!--
   
   <script src="js/foundation/foundation.js"></script>
